# tomoshibi

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  docker-compose.yml  pyproject.toml
config/: profile.example.json
docs/: RYZEN_AI_PC_SETUP.md  SUBMISSION.md
docs/submission/: DEMO_ASSETS_README.txt  TAGLINE.txt  TEAM_BIOS.md  TECHNICAL_SUMMARY.md
docs/submission/slides/: index.html  slides.css
scripts/: demo_scenario.py  edit_chat_demo.sh  edit_fall_demo.sh  make_combined_demo.sh  make_tagline_pdf.sh  make_techsummary_pdf.sh  run_llm_server.sh  run_voicevox.sh
src/tomoshibi/: __init__.py  app.py  config.py  runtime.py  ui_render.py
src/tomoshibi/companion/: __init__.py  llm.py  persona.py  text.py
src/tomoshibi/emergency/: __init__.py  dispatch.py  notify.py  profile.py
src/tomoshibi/guardian/: __init__.py  camera.py  fsm.py  pose.py  vision.py
src/tomoshibi/obs/: __init__.py  trace.py
src/tomoshibi/voice/: __init__.py  asr.py  jp_text.py  tts.py
src/tomoshibi/webapp/: __init__.py  serialize.py  server.py
tests/: test_asr_params.py  test_camera.py  test_dispatch.py  test_fall_heuristic.py  test_fsm.py  test_jp_text.py  test_persona.py  test_runtime_smoke.py  test_trim_reply.py  test_webapp_api.py
web/: conversation.js  guardian.js  index.html  live2d.js  main.js  styles.css
